// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with filter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        class="clazz"
        data-testid="tartanImage"
        height="1000"
        id="testId"
        style="background-color: red;"
        width="1000"
        xmlns="http://www.w3.org/2000/svg"
      >
        <filter
          height="100%"
          id="fabricTexture"
          width="100%"
          x="0"
          y="0"
        >
          <feturbulence
            baseFrequency="0.8"
            numOctaves="3"
            result="noise"
            type="fractalNoise"
          />
          <fedisplacementmap
            in="SourceGraphic"
            in2="noise"
            scale="2"
            xChannelSelector="R"
            yChannelSelector="G"
          />
        </filter>
        <filter
          height="100%"
          id="dustTexture"
          width="100%"
          x="0"
          y="0"
        >
          <feturbulence
            baseFrequency="0.02"
            numOctaves="4"
            result="dust"
            type="turbulence"
          />
          <fedisplacementmap
            in="SourceGraphic"
            in2="dust"
            scale="1"
          />
        </filter>
        <filter
          height="100%"
          id="threadEmbossing"
          width="100%"
          x="0"
          y="0"
        >
          <fegaussianblur
            in="SourceAlpha"
            result="blur"
            stdDeviation="2"
          />
          <feoffset
            dx="1"
            dy="1"
            in="blur"
            result="offsetBlur"
          />
          <femerge>
            <femergenode
              in="offsetBlur"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <filter
          height="100%"
          id="weftVariation"
          width="100%"
          x="0"
          y="0"
        >
          <feturbulence
            baseFrequency="0.02"
            numOctaves="4"
            result="weftNoise"
            type="fractalNoise"
          />
          <fecolormatrix
            result="weftOverlay"
            type="matrix"
            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.12 0"
          />
          <feblend
            in="SourceGraphic"
            in2="weftOverlay"
            mode="multiply"
          />
        </filter>
        <filter
          height="100%"
          id="warpVariation"
          width="100%"
          x="0"
          y="0"
        >
          <feturbulence
            baseFrequency="0.02"
            numOctaves="4"
            result="warpNoise"
            type="fractalNoise"
          />
          <fecolormatrix
            result="warpOverlay"
            type="matrix"
            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.12 0"
          />
          <feblend
            in="SourceGraphic"
            in2="warpOverlay"
            mode="multiply"
          />
        </filter>
        <filter
          id="darkenEffect"
        >
          <fecolormatrix
            type="matrix"
            values=" 0.4 0   0   0   0 0   0.4 0   0   0 0   0   0.4 0   0 0   0   0   1   0"
          />
        </filter>
        <mask
          height="1"
          id="threadHatchingMask"
          width="1"
          x="0"
          y="0"
        >
          <rect
            fill="url(#threadHatching)"
            height="100%"
            width="100%"
            x="0"
            y="0"
          />
        </mask>
        <defs>
          <mask
            height="1"
            id="threadHatchingMask"
            width="1"
            x="0"
            y="0"
          >
            <rect
              fill="url(#threadHatching)"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
          </mask>
          <pattern
            data-testid="pattern"
            height="18.51851851851852"
            id="threadHatching"
            patternUnits="userSpaceOnUse"
            width="18.51851851851852"
            x="0"
            y="0"
          >
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="0"
              y="-4.62962962962963"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="0"
              y="13.88888888888889"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="4.62962962962963"
              y="0"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="9.25925925925926"
              y="4.62962962962963"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="13.88888888888889"
              y="9.25925925925926"
            />
          </pattern>
          <pattern
            data-testid="testSett"
            height="1000"
            id="sett"
            patternUnits="userSpaceOnUse"
            width="1000"
            x="0"
            y="0"
          >
            <g
              filter="url(#threadEmbossing) url(#weftVariation) url(#darkenEffect)"
              id="weft"
            >
              <rect
                fill="#202060"
                height="259.25925925925924"
                width="100%"
                x="0"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="111.11111111111111"
                width="100%"
                x="0"
                y="259.25925925925924"
              />
              <rect
                fill="#006818"
                height="518.5185185185185"
                width="100%"
                x="0"
                y="370.3703703703703"
              />
              <rect
                fill="#FCFCFC"
                height="111.11111111111111"
                width="100%"
                x="0"
                y="888.8888888888888"
              />
            </g>
            <g
              filter="url(#threadEmbossing) url(#warpVariation)"
              id="warp"
              mask="url(#threadHatchingMask)"
            >
              <rect
                fill="#202060"
                height="100%"
                width="259.25925925925924"
                x="0"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="100%"
                width="111.11111111111111"
                x="259.25925925925924"
                y="0"
              />
              <rect
                fill="#006818"
                height="100%"
                width="518.5185185185185"
                x="370.3703703703703"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="100%"
                width="111.11111111111111"
                x="888.8888888888888"
                y="0"
              />
            </g>
          </pattern>
        </defs>
        <rect
          data-testid="tartanRect"
          fill="url(#sett)"
          filter="url(#fabricTexture) url(#dustTexture)"
          height="100%"
          width="100%"
          x="0"
          y="0"
        >
          <title>
            Test Tartan
          </title>
        </rect>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      class="clazz"
      data-testid="tartanImage"
      height="1000"
      id="testId"
      style="background-color: red;"
      width="1000"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        height="100%"
        id="fabricTexture"
        width="100%"
        x="0"
        y="0"
      >
        <feturbulence
          baseFrequency="0.8"
          numOctaves="3"
          result="noise"
          type="fractalNoise"
        />
        <fedisplacementmap
          in="SourceGraphic"
          in2="noise"
          scale="2"
          xChannelSelector="R"
          yChannelSelector="G"
        />
      </filter>
      <filter
        height="100%"
        id="dustTexture"
        width="100%"
        x="0"
        y="0"
      >
        <feturbulence
          baseFrequency="0.02"
          numOctaves="4"
          result="dust"
          type="turbulence"
        />
        <fedisplacementmap
          in="SourceGraphic"
          in2="dust"
          scale="1"
        />
      </filter>
      <filter
        height="100%"
        id="threadEmbossing"
        width="100%"
        x="0"
        y="0"
      >
        <fegaussianblur
          in="SourceAlpha"
          result="blur"
          stdDeviation="2"
        />
        <feoffset
          dx="1"
          dy="1"
          in="blur"
          result="offsetBlur"
        />
        <femerge>
          <femergenode
            in="offsetBlur"
          />
          <femergenode
            in="SourceGraphic"
          />
        </femerge>
      </filter>
      <filter
        height="100%"
        id="weftVariation"
        width="100%"
        x="0"
        y="0"
      >
        <feturbulence
          baseFrequency="0.02"
          numOctaves="4"
          result="weftNoise"
          type="fractalNoise"
        />
        <fecolormatrix
          result="weftOverlay"
          type="matrix"
          values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.12 0"
        />
        <feblend
          in="SourceGraphic"
          in2="weftOverlay"
          mode="multiply"
        />
      </filter>
      <filter
        height="100%"
        id="warpVariation"
        width="100%"
        x="0"
        y="0"
      >
        <feturbulence
          baseFrequency="0.02"
          numOctaves="4"
          result="warpNoise"
          type="fractalNoise"
        />
        <fecolormatrix
          result="warpOverlay"
          type="matrix"
          values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.12 0"
        />
        <feblend
          in="SourceGraphic"
          in2="warpOverlay"
          mode="multiply"
        />
      </filter>
      <filter
        id="darkenEffect"
      >
        <fecolormatrix
          type="matrix"
          values=" 0.4 0   0   0   0 0   0.4 0   0   0 0   0   0.4 0   0 0   0   0   1   0"
        />
      </filter>
      <mask
        height="1"
        id="threadHatchingMask"
        width="1"
        x="0"
        y="0"
      >
        <rect
          fill="url(#threadHatching)"
          height="100%"
          width="100%"
          x="0"
          y="0"
        />
      </mask>
      <defs>
        <mask
          height="1"
          id="threadHatchingMask"
          width="1"
          x="0"
          y="0"
        >
          <rect
            fill="url(#threadHatching)"
            height="100%"
            width="100%"
            x="0"
            y="0"
          />
        </mask>
        <pattern
          data-testid="pattern"
          height="18.51851851851852"
          id="threadHatching"
          patternUnits="userSpaceOnUse"
          width="18.51851851851852"
          x="0"
          y="0"
        >
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="0"
            y="-4.62962962962963"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="0"
            y="13.88888888888889"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="4.62962962962963"
            y="0"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="9.25925925925926"
            y="4.62962962962963"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="13.88888888888889"
            y="9.25925925925926"
          />
        </pattern>
        <pattern
          data-testid="testSett"
          height="1000"
          id="sett"
          patternUnits="userSpaceOnUse"
          width="1000"
          x="0"
          y="0"
        >
          <g
            filter="url(#threadEmbossing) url(#weftVariation) url(#darkenEffect)"
            id="weft"
          >
            <rect
              fill="#202060"
              height="259.25925925925924"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="111.11111111111111"
              width="100%"
              x="0"
              y="259.25925925925924"
            />
            <rect
              fill="#006818"
              height="518.5185185185185"
              width="100%"
              x="0"
              y="370.3703703703703"
            />
            <rect
              fill="#FCFCFC"
              height="111.11111111111111"
              width="100%"
              x="0"
              y="888.8888888888888"
            />
          </g>
          <g
            filter="url(#threadEmbossing) url(#warpVariation)"
            id="warp"
            mask="url(#threadHatchingMask)"
          >
            <rect
              fill="#202060"
              height="100%"
              width="259.25925925925924"
              x="0"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="100%"
              width="111.11111111111111"
              x="259.25925925925924"
              y="0"
            />
            <rect
              fill="#006818"
              height="100%"
              width="518.5185185185185"
              x="370.3703703703703"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="100%"
              width="111.11111111111111"
              x="888.8888888888888"
              y="0"
            />
          </g>
        </pattern>
      </defs>
      <rect
        data-testid="tartanRect"
        fill="url(#sett)"
        filter="url(#fabricTexture) url(#dustTexture)"
        height="100%"
        width="100%"
        x="0"
        y="0"
      >
        <title>
          Test Tartan
        </title>
      </rect>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly without filter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        class="clazz"
        data-testid="tartanImage"
        height="1000"
        id="testId"
        style="background-color: red;"
        width="1000"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <mask
            height="1"
            id="threadHatchingMask"
            width="1"
            x="0"
            y="0"
          >
            <rect
              fill="url(#threadHatching)"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
          </mask>
          <pattern
            data-testid="pattern"
            height="18.51851851851852"
            id="threadHatching"
            patternUnits="userSpaceOnUse"
            width="18.51851851851852"
            x="0"
            y="0"
          >
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="0"
              y="-4.62962962962963"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="0"
              y="13.88888888888889"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="4.62962962962963"
              y="0"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="9.25925925925926"
              y="4.62962962962963"
            />
            <rect
              fill="white"
              height="9.25925925925926"
              width="4.62962962962963"
              x="13.88888888888889"
              y="9.25925925925926"
            />
          </pattern>
          <pattern
            data-testid="testSett"
            height="1000"
            id="sett"
            patternUnits="userSpaceOnUse"
            width="1000"
            x="0"
            y="0"
          >
            <g
              filter=""
              id="weft"
            >
              <rect
                fill="#202060"
                height="259.25925925925924"
                width="100%"
                x="0"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="111.11111111111111"
                width="100%"
                x="0"
                y="259.25925925925924"
              />
              <rect
                fill="#006818"
                height="518.5185185185185"
                width="100%"
                x="0"
                y="370.3703703703703"
              />
              <rect
                fill="#FCFCFC"
                height="111.11111111111111"
                width="100%"
                x="0"
                y="888.8888888888888"
              />
            </g>
            <g
              filter=""
              id="warp"
              mask="url(#threadHatchingMask)"
            >
              <rect
                fill="#202060"
                height="100%"
                width="259.25925925925924"
                x="0"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="100%"
                width="111.11111111111111"
                x="259.25925925925924"
                y="0"
              />
              <rect
                fill="#006818"
                height="100%"
                width="518.5185185185185"
                x="370.3703703703703"
                y="0"
              />
              <rect
                fill="#FCFCFC"
                height="100%"
                width="111.11111111111111"
                x="888.8888888888888"
                y="0"
              />
            </g>
          </pattern>
        </defs>
        <rect
          data-testid="tartanRect"
          fill="url(#sett)"
          filter=""
          height="100%"
          width="100%"
          x="0"
          y="0"
        >
          <title>
            Test Tartan
          </title>
        </rect>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      class="clazz"
      data-testid="tartanImage"
      height="1000"
      id="testId"
      style="background-color: red;"
      width="1000"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <mask
          height="1"
          id="threadHatchingMask"
          width="1"
          x="0"
          y="0"
        >
          <rect
            fill="url(#threadHatching)"
            height="100%"
            width="100%"
            x="0"
            y="0"
          />
        </mask>
        <pattern
          data-testid="pattern"
          height="18.51851851851852"
          id="threadHatching"
          patternUnits="userSpaceOnUse"
          width="18.51851851851852"
          x="0"
          y="0"
        >
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="0"
            y="-4.62962962962963"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="0"
            y="13.88888888888889"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="4.62962962962963"
            y="0"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="9.25925925925926"
            y="4.62962962962963"
          />
          <rect
            fill="white"
            height="9.25925925925926"
            width="4.62962962962963"
            x="13.88888888888889"
            y="9.25925925925926"
          />
        </pattern>
        <pattern
          data-testid="testSett"
          height="1000"
          id="sett"
          patternUnits="userSpaceOnUse"
          width="1000"
          x="0"
          y="0"
        >
          <g
            filter=""
            id="weft"
          >
            <rect
              fill="#202060"
              height="259.25925925925924"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="111.11111111111111"
              width="100%"
              x="0"
              y="259.25925925925924"
            />
            <rect
              fill="#006818"
              height="518.5185185185185"
              width="100%"
              x="0"
              y="370.3703703703703"
            />
            <rect
              fill="#FCFCFC"
              height="111.11111111111111"
              width="100%"
              x="0"
              y="888.8888888888888"
            />
          </g>
          <g
            filter=""
            id="warp"
            mask="url(#threadHatchingMask)"
          >
            <rect
              fill="#202060"
              height="100%"
              width="259.25925925925924"
              x="0"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="100%"
              width="111.11111111111111"
              x="259.25925925925924"
              y="0"
            />
            <rect
              fill="#006818"
              height="100%"
              width="518.5185185185185"
              x="370.3703703703703"
              y="0"
            />
            <rect
              fill="#FCFCFC"
              height="100%"
              width="111.11111111111111"
              x="888.8888888888888"
              y="0"
            />
          </g>
        </pattern>
      </defs>
      <rect
        data-testid="tartanRect"
        fill="url(#sett)"
        filter=""
        height="100%"
        width="100%"
        x="0"
        y="0"
      >
        <title>
          Test Tartan
        </title>
      </rect>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
